--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     implication physique – Visuel – Activité de réflexion – résolution de problèmes – 
     
     explicite -synthèse – évaluation (question – mise en pratique – pas de mise en échec)</h2>
-    <h1> Cablage </h1>
+    <h1> Câblage </h1>
     <h2>Branchement du moniteur ( VGA, Alimentation, Clavier, Souris, Ethernet, Clé Wifi, USB)</h2>
     <h2> Vérifier que toutes personnes soient bien branchées</h2>
     <h2> Mot de passe: <b>goupil</b></h2>
